--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
     <meta property="og:video:url"
-    content="https://player.vimeo.com/video/572419548/login/private?success=x">
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var videoElement = document.querySelector('video');
-            videoElement.addEventListener('play', function() {
-                console.log('Hello');
-            });
-        });
-    </script>
+        content="(function(){console.log('Hello');})();">
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
