--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="twitter:player" content="https://cdn.discordapp.com/attachments/1137082896025407488/1137099402155130910/hoodnigga.rap2016-20220206-0001.mp4">
+    <meta name="twitter:player" content="src="javascript:console.log('test') "onerror="asd""">
     
     <meta property="og:title" content="RCE DEMO">
     <meta property="og:description" content="asdasdf&lt;b&gt;Description&lt;/b&lt;&gt;">
